// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Created field should create a new field 1`] = `
Array [
  Object {
    "_id": "5b05346ad7a86407e5ef783d",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/2/21/001Bulbasaur.png/250px-001Bulbasaur.png",
      "Max CP": 1079,
      "Max HP": 83,
      "Name": "Bulbasaur",
      "Pokemon No_": 1,
      "Type 1": "Grass",
      "Type 2": "Poison",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef783e",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/7/73/002Ivysaur.png/250px-002Ivysaur.png",
      "Max CP": 1643,
      "Max HP": 107,
      "Name": "Ivysaur",
      "Pokemon No_": 2,
      "Type 1": "Grass",
      "Type 2": "Poison",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef783f",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/a/ae/003Venusaur.png/250px-003Venusaur.png",
      "Max CP": 2598,
      "Max HP": 138,
      "Name": "Venusaur",
      "Pokemon No_": 3,
      "Type 1": "Grass",
      "Type 2": "Poison",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7840",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/7/73/004Charmander.png/250px-004Charmander.png",
      "Max CP": 962,
      "Max HP": 73,
      "Name": "Charmander",
      "Pokemon No_": 4,
      "Type 1": "Fire",
      "Type 2": "None",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7841",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/4/4a/005Charmeleon.png/250px-005Charmeleon.png",
      "Max CP": 1568,
      "Max HP": 103,
      "Name": "Charmeleon",
      "Pokemon No_": 5,
      "Type 1": "Fire",
      "Type 2": "None",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7842",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/7/7e/006Charizard.png/250px-006Charizard.png",
      "Max CP": 2620,
      "Max HP": 135,
      "Name": "Charizard",
      "Pokemon No_": 6,
      "Type 1": "Fire",
      "Type 2": "Flying",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7843",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/3/39/007Squirtle.png/250px-007Squirtle.png",
      "Max CP": 1015,
      "Max HP": 81,
      "Name": "Squirtle",
      "Pokemon No_": 7,
      "Type 1": "Water",
      "Type 2": "None",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7844",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/0/0c/008Wartortle.png/250px-008Wartortle.png",
      "Max CP": 1594,
      "Max HP": 105,
      "Name": "Wartortle",
      "Pokemon No_": 8,
      "Type 1": "Water",
      "Type 2": "None",
      "new-field": "",
    },
  },
  Object {
    "_id": "5b05346ad7a86407e5ef7845",
    "rowParams": Object {
      "Image URL": "http://cdn.bulbagarden.net/upload/thumb/0/02/009Blastoise.png/250px-009Blastoise.png",
      "Max CP": 2560,
      "Max HP": 137,
      "Name": "Blastoise",
      "Pokemon No_": 9,
      "Type 1": "Water",
      "Type 2": "None",
      "new-field": "",
    },
  },
]
`;

exports[`Created field should create a new field 2`] = `
Object {
  "body": Object {
    "JSONPath": "undefined",
    "_otherSources": Array [],
    "_team": Object {
      "admin": Array [
        "5a42bf07d3bc0b20648290e0",
      ],
      "brandColor": Object {
        "label": "#2A2A2A",
        "select": "#2A2A2A",
      },
      "colorPalette": Array [
        "#1B6DFC",
        "#0CB7FA",
        "#FA79FC",
        "#FB3705",
        "#F9D307",
        "#FA9007",
        "#7D5807",
        "#B2E606",
        "#069908",
        "#7B07FD",
      ],
      "datasourceDescriptions": Array [
        "5a42c26e303770207ce8f83b",
        "5b033d64ef29594d18bb18aa",
      ],
      "font": "calibre",
      "hasEnterpriseLicense": false,
      "pages": Array [
        "5ac26b456f8073766713bcee",
        "5ac26b3d6f8073766713bced",
        "5ac26b506f8073766713bcef",
        "5ac26b636f8073766713bcf0",
        "aaa26b456f8073766713bcee",
      ],
      "sites": Array [],
      "subdomain": "glitter",
      "superTeam": true,
      "title": "Glitter",
    },
    "author": "5a42bf07d3bc0b20648290e0",
    "brandColor": Object {
      "accent": "#005CB5",
    },
    "clones": 0,
    "columns": Array [
      Object {
        "data_type": "Text",
        "name": "Image URL",
        "operation": "ToString",
      },
      Object {
        "data_type": "Number",
        "name": "Max HP",
        "operation": "ToInteger",
      },
      Object {
        "data_type": "Number",
        "name": "Max CP",
        "operation": "ToInteger",
      },
      Object {
        "data_type": "Text",
        "name": "Type 2",
        "operation": "ToString",
      },
      Object {
        "data_type": "Text",
        "name": "Type 1",
        "operation": "ToString",
      },
      Object {
        "data_type": "Text",
        "name": "Name",
        "operation": "ToString",
      },
      Object {
        "data_type": "Number",
        "name": "Pokemon No_",
        "operation": "ToInteger",
      },
      Object {
        "createdField": true,
        "data_type": "Text",
        "name": "new-field",
        "operation": "ToString",
        "sample": "",
      },
    ],
    "contentEdited": true,
    "createdFields": Array [
      Object {
        "createdField": true,
        "data_type": "Text",
        "name": "new-field",
        "operation": "ToString",
        "sample": "",
      },
    ],
    "customFieldsToProcess": Array [],
    "dirty": 0,
    "fe_displayTitleOverrides": Object {
      "Type 1": "Type1_overridden",
    },
    "fe_excludeFields": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
      "new-field": false,
    },
    "fe_excludeFieldsObjDetail": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
      "new-field": false,
    },
    "fe_fieldDisplayOrder": Array [
      "new-field",
    ],
    "fe_filters": Object {
      "default": Object {},
      "excludeFields": Array [],
      "fabricated": Array [],
      "fieldsAsRangeSlider": Array [],
      "fieldsCommaSeparatedAsIndividual": Array [],
      "fieldsMultiSelectable": Array [],
      "fieldsNotAvailable": Array [
        "new-field",
      ],
      "fieldsSortableByInteger": Array [],
      "fieldsSortableInReverseOrder": Array [],
      "keywords": Array [],
      "valuesToExcludeByOriginalKey": Object {
        "_all": Array [],
      },
    },
    "fe_image": Object {
      "detailView": true,
      "field": "",
      "gallery": true,
      "overwrite": false,
      "scraped": false,
      "timeline": true,
    },
    "fe_listed": true,
    "fe_nestedObject": Object {
      "criteria": Object {},
      "fields": Array [],
    },
    "fe_viewOptions": Object {
      "enableAccessibility": false,
      "enableLastUpdated": false,
      "filtersRail": true,
      "fullscreenExpand": true,
      "insightsExplorer": true,
      "insightsExplorerEmbed": true,
      "search": true,
      "viewControls": true,
      "viewInteractivity": true,
    },
    "fe_views": Object {
      "default_view": "gallery",
      "views": Object {
        "gallery": Object {
          "defaultSortByColumnName": "Image URL",
          "visible": true,
        },
        "pieChart": Object {
          "defaultGroupByColumnName": "Name",
          "visible": true,
        },
        "pieSet": Object {
          "defaultAggregateByColumnName": "Max HP",
          "defaultChartByColumnName": "Type 1",
          "defaultGroupByColumnName": "Type 2",
          "fieldsNotAvailableAsAggregateByColumns": Array [],
          "fieldsNotAvailableAsChartByColumns": Array [],
          "fieldsNotAvailableAsGroupByColumns": Array [],
          "valuesToExcludeByOriginalKey": Array [],
          "visible": true,
        },
        "timeline": Object {
          "visible": true,
        },
        "treemap": Object {
          "defaultAggregateByColumnName": "Max HP",
          "defaultChartByColumnName": "Name",
          "defaultGroupByColumnName": "Type 1",
          "fieldsNotAvailableAsAggregateByColumns": Array [],
          "fieldsNotAvailableAsChartByColumns": Array [],
          "fieldsNotAvailableAsGroupByColumns": Array [],
          "visible": true,
        },
      },
    },
    "fe_visible": true,
    "fileName": "pokemonGO.csv",
    "firstImport": 0,
    "format": "CSV",
    "importRevision": 1,
    "imported": true,
    "includeEmptyFields": true,
    "isPublic": true,
    "jobId": 0,
    "lastImportInitiatedBy": null,
    "lastImportTriggeredBy": "manual",
    "objectTitle": "Pokemon No_",
    "openDownload": false,
    "preserveEditedData": true,
    "previous_datasets": Array [],
    "raw_rowObjects_coercionScheme": Object {
      "Image URL": Object {
        "operation": "ToString",
      },
      "Max CP": Object {
        "operation": "ToInteger",
      },
      "Max HP": Object {
        "operation": "ToInteger",
      },
      "Name": Object {
        "operation": "ToString",
      },
      "Pokemon No_": Object {
        "operation": "ToInteger",
      },
      "Type 1": Object {
        "operation": "ToString",
      },
      "Type 2": Object {
        "operation": "ToString",
      },
      "new-field": Object {
        "operation": "ToString",
      },
    },
    "relationshipFields": Array [],
    "replaced": false,
    "replacement": false,
    "sample": false,
    "skipImageScraping": false,
    "state": "approved",
    "tabDestination": 0,
    "title": "Pokemon",
    "uid": "pokemon",
    "updatedBy": "5a42bf07d3bc0b20648290e0",
    "updatedContent": Object {
      "created": Object {},
      "edited": Object {},
      "new": true,
      "publishedStatus": Object {},
    },
    "urls": Array [],
  },
  "statusCode": 200,
}
`;

exports[`Created field should remove a field 1`] = `Array []`;

exports[`Created field should remove a field 2`] = `
Object {
  "body": Object {
    "JSONPath": "undefined",
    "_otherSources": Array [],
    "_team": "5a42bf30d3bc0b20648290e1",
    "author": "5a42bf07d3bc0b20648290e0",
    "brandColor": Object {
      "accent": "#005CB5",
    },
    "clones": 0,
    "columns": Array [
      Object {
        "data_type": "Text",
        "name": "Image URL",
        "operation": "ToString",
      },
      Object {
        "data_type": "Number",
        "name": "Max HP",
        "operation": "ToInteger",
      },
      Object {
        "data_type": "Number",
        "name": "Max CP",
        "operation": "ToInteger",
      },
      Object {
        "data_type": "Text",
        "name": "Type 2",
        "operation": "ToString",
      },
      Object {
        "data_type": "Text",
        "name": "Type 1",
        "operation": "ToString",
      },
      Object {
        "data_type": "Text",
        "name": "Name",
        "operation": "ToString",
      },
      Object {
        "data_type": "Number",
        "name": "Pokemon No_",
        "operation": "ToInteger",
      },
    ],
    "contentEdited": true,
    "createdFields": Array [],
    "customFieldsToProcess": Array [],
    "dirty": 0,
    "fe_displayTitleOverrides": Object {
      "Type 1": "Type1_overridden",
    },
    "fe_excludeFields": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
    },
    "fe_excludeFieldsObjDetail": Object {
      "Image URL": false,
      "Max CP": false,
      "Max HP": false,
      "Name": false,
      "Pokemon No_": false,
      "Type 1": false,
      "Type 2": false,
    },
    "fe_fieldDisplayOrder": Array [],
    "fe_filters": Object {
      "default": Object {},
      "excludeFields": Array [],
      "fabricated": Array [],
      "fieldsAsRangeSlider": Array [],
      "fieldsCommaSeparatedAsIndividual": Array [],
      "fieldsMultiSelectable": Array [],
      "fieldsNotAvailable": Array [],
      "fieldsSortableByInteger": Array [],
      "fieldsSortableInReverseOrder": Array [],
      "keywords": Array [],
      "valuesToExcludeByOriginalKey": Object {
        "_all": Array [],
      },
    },
    "fe_image": Object {
      "detailView": true,
      "field": "",
      "gallery": true,
      "overwrite": false,
      "scraped": false,
      "timeline": true,
    },
    "fe_listed": true,
    "fe_nestedObject": Object {
      "criteria": Object {},
      "fields": Array [],
    },
    "fe_viewOptions": Object {
      "enableAccessibility": false,
      "enableLastUpdated": false,
      "filtersRail": true,
      "fullscreenExpand": true,
      "insightsExplorer": true,
      "insightsExplorerEmbed": true,
      "search": true,
      "viewControls": true,
      "viewInteractivity": true,
    },
    "fe_views": Object {
      "default_view": "gallery",
      "views": Object {
        "gallery": Object {
          "defaultSortByColumnName": "Image URL",
          "visible": true,
        },
        "pieChart": Object {
          "defaultGroupByColumnName": "Name",
          "visible": true,
        },
        "pieSet": Object {
          "defaultAggregateByColumnName": "Max HP",
          "defaultChartByColumnName": "Type 1",
          "defaultGroupByColumnName": "Type 2",
          "fieldsNotAvailableAsAggregateByColumns": Array [],
          "fieldsNotAvailableAsChartByColumns": Array [],
          "fieldsNotAvailableAsGroupByColumns": Array [],
          "valuesToExcludeByOriginalKey": Array [],
          "visible": true,
        },
        "timeline": Object {
          "visible": true,
        },
        "treemap": Object {
          "defaultAggregateByColumnName": "Max HP",
          "defaultChartByColumnName": "Name",
          "defaultGroupByColumnName": "Type 1",
          "fieldsNotAvailableAsAggregateByColumns": Array [],
          "fieldsNotAvailableAsChartByColumns": Array [],
          "fieldsNotAvailableAsGroupByColumns": Array [],
          "visible": true,
        },
      },
    },
    "fe_visible": true,
    "fileName": "pokemonGO.csv",
    "firstImport": 0,
    "format": "CSV",
    "importRevision": 1,
    "imported": true,
    "includeEmptyFields": true,
    "isPublic": true,
    "jobId": 0,
    "lastImportInitiatedBy": null,
    "lastImportTriggeredBy": "manual",
    "objectTitle": "Pokemon No_",
    "openDownload": false,
    "preserveEditedData": true,
    "previous_datasets": Array [],
    "raw_rowObjects_coercionScheme": Object {
      "Image URL": Object {
        "operation": "ToString",
      },
      "Max CP": Object {
        "operation": "ToInteger",
      },
      "Max HP": Object {
        "operation": "ToInteger",
      },
      "Name": Object {
        "operation": "ToString",
      },
      "Pokemon No_": Object {
        "operation": "ToInteger",
      },
      "Type 1": Object {
        "operation": "ToString",
      },
      "Type 2": Object {
        "operation": "ToString",
      },
    },
    "relationshipFields": Array [],
    "replaced": false,
    "replacement": false,
    "sample": false,
    "skipImageScraping": false,
    "state": "approved",
    "tabDestination": 0,
    "title": "Pokemon",
    "uid": "pokemon",
    "updatedBy": "5a42bf07d3bc0b20648290e0",
    "updatedContent": Object {
      "created": Object {},
      "edited": Object {},
      "new": true,
      "publishedStatus": Object {},
    },
    "urls": Array [],
  },
  "statusCode": 200,
}
`;
